// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Onboarding SlideWrapper component should pass additional props to Slide 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00676D",
                "fontFamily": "InterUI-Black",
                "fontSize": 36,
                "lineHeight": 41.4,
                "marginBottom": 8,
              }
            }
          >
            Hey friend!
          </Text>
          <Text
            style={
              Object {
                "color": "#505050",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 20.16,
              }
            }
          >
            We'd like to help personalize your mobile experience so we can help you with every step on your journey.
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row-reverse",
          "justifyContent": "space-between",
          "marginBottom": 8,
          "paddingHorizontal": 16,
          "paddingVertical": 0,
        }
      }
      vertical={false}
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={true}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#00676D",
              "borderColor": "#00676D",
              "borderRadius": 48,
              "borderWidth": 2,
              "elevation": 2,
              "flexDirection": "row",
              "height": 48,
              "justifyContent": "center",
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 20.16,
              }
            }
          >
            Next
          </Text>
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight="20"
            bbWidth="20"
            meetOrSlice={0}
            minX={0}
            minY={0}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                Object {
                  "marginLeft": 8,
                  "marginRight": -8,
                },
                false,
                Object {
                  "flex": 0,
                  "height": 20,
                  "width": 20,
                },
              ]
            }
            vbHeight={24}
            vbWidth={24}
          >
            <RNSVGPath
              d="M9.65 21L8 20.1l7.72-8.1L8 3.9 9.65 3l8.16 8.54c.27.28.27.64 0 .92L9.67 21z"
              fill={
                Array [
                  0,
                  1,
                  1,
                  1,
                  1,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth="1"
              x={0}
              y={0}
            />
          </RNSVGSvgView>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding SlideWrapper component should render 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00676D",
                "fontFamily": "InterUI-Black",
                "fontSize": 36,
                "lineHeight": 41.4,
                "marginBottom": 8,
              }
            }
          >
            Hey friend!
          </Text>
          <Text
            style={
              Object {
                "color": "#505050",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 20.16,
              }
            }
          >
            We'd like to help personalize your mobile experience so we can help you with every step on your journey.
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding SlideWrapper component should render a custom description 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00676D",
                "fontFamily": "InterUI-Black",
                "fontSize": 36,
                "lineHeight": 41.4,
                "marginBottom": 8,
              }
            }
          >
            Hey friend!
          </Text>
          <Text
            style={
              Object {
                "color": "#505050",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 20.16,
              }
            }
          >
            Custom description text
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding SlideWrapper component should render a custom first name 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00676D",
                "fontFamily": "InterUI-Black",
                "fontSize": 36,
                "lineHeight": 41.4,
                "marginBottom": 8,
              }
            }
          >
            Hey firstName!
          </Text>
          <Text
            style={
              Object {
                "color": "#505050",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 20.16,
              }
            }
          >
            We'd like to help personalize your mobile experience so we can help you with every step on your journey.
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding SlideWrapper component should render a custom image 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://picsum.photos/1200/1200?random",
            }
          }
          style={
            Object {
              "flex": 3,
              "marginBottom": 16,
              "resizeMode": "contain",
            }
          }
        />
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00676D",
                "fontFamily": "InterUI-Black",
                "fontSize": 36,
                "lineHeight": 41.4,
                "marginBottom": 8,
              }
            }
          >
            Hey friend!
          </Text>
          <Text
            style={
              Object {
                "color": "#505050",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 20.16,
              }
            }
          >
            We'd like to help personalize your mobile experience so we can help you with every step on your journey.
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`The Onboarding SlideWrapper component should render a custom title 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 16,
              "paddingVertical": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00676D",
                "fontFamily": "InterUI-Black",
                "fontSize": 36,
                "lineHeight": 41.4,
                "marginBottom": 8,
              }
            }
          >
            Hey friend!
          </Text>
          <Text
            style={
              Object {
                "color": "#505050",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 20.16,
              }
            }
          >
            We'd like to help personalize your mobile experience so we can help you with every step on your journey.
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
